--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Google Gemini Configuration
-GOOGLE_API_KEY=your_google_api_key_here
-GEMINI_MODEL=gemini-2.0-flash-exp
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o
 
 # GitHub Configuration
 GITHUB_TOKEN=your_github_personal_access_token_here
