--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ai-code-reviewer"
 version = "0.1.0"
-description = "AI-powered GitHub PR code review agent using Pydantic AI and Gemini"
+description = "AI-powered GitHub PR code review agent using Pydantic AI and OpenAI"
 requires-python = ">=3.10"
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
@@ -10,7 +10,7 @@ readme = "README.md"
 license = {text = "MIT"}
 
 dependencies = [
-    "pydantic-ai[google,logfire]>=0.0.1",
+    "pydantic-ai[openai,logfire]>=0.0.1",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
     "pygithub>=2.5.0",
