--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,41 @@
-name: Deploy to Railway
+name: CI/CD Pipeline
 
-# TODO: Configure to run on push to main branch
-# TODO: Set up Railway deployment
-# TODO: Add environment variables from secrets
+on:
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
+
+jobs:
+    validate:
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: "3.12"
+                  cache: "pip"
+
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip setuptools wheel
+                  pip install -e ".[dev]"
+
+            - name: Run tests
+              run: |
+                  pytest tests/ -v
+
+            - name: Run linting
+              run: |
+                  ruff check src/ tests/
+
+            - name: Deployment will proceed
+              if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+              run: |
+                  echo "✅ All checks passed!"
+                  echo "🚀 Railway will automatically deploy this commit"
+                  echo "📊 Monitor deployment at https://railway.app"
