fix: Update GitHub token reference in CI workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
     # Pydantic Settings will automatically pick these up.
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      GITHUB_WEBHOOK_SECRET: ${{ secrets.GITHUB_WEBHOOK_SECRET }}
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      GITHUB_WEBHOOK_SECRET: ${{ secrets.GH_WEBHOOK_SECRET }}
       LOGFIRE_TOKEN: ${{ secrets.LOGFIRE_TOKEN }}
       OPENAI_MODEL: "gpt-4o"
       DEBUG: "True"
