--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,13 @@ REVIEW_TEMPERATURE=0.3
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
+
+# Pinecone Configuration (for RAG knowledge base)
+PINECONE_API_KEY=your_pinecone_api_key_here
+PINECONE_INDEX_NAME=code-style-guides
+
+# RAG Configuration
+RAG_ENABLED=True
+EMBEDDING_MODEL=text-embedding-3-small
+RAG_TOP_K=3
+RAG_MIN_SIMILARITY=0.5
