--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,15 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pyjwt[crypto]>=2.9.0",
     "logfire[fastapi]>=0.1.0",
+    # RAG Knowledge Base
+    "langchain>=0.3.0",
+    "langchain-openai>=0.2.0",
+    "langchain-pinecone>=0.2.0",
+    "langchain-community>=0.3.0",
+    "pinecone>=5.0.0",
+    "pypdf>=5.1.0",
+    "pyyaml>=6.0.0",
+    "tiktoken>=0.8.0",
 ]
 
 [project.optional-dependencies]
