--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,10 @@ jobs:
       GH_TOKEN: ${{ vars.GH_TOKEN }}
       WEBHOOK_SECRET: ${{ vars.GH_WEBHOOK_SECRET }}
       LOGFIRE_TOKEN: ${{ secrets.LOGFIRE_TOKEN }}
-      # GitHub App credentials
-      APP_ID: ${{ vars.APP_ID }}
+      # GitHub App credentials (use secrets for sensitive data)
+      APP_ID: ${{ vars.GH_APP_INSTALLATION_ID }}
       APP_INSTALLATION_ID: ${{ vars.GH_APP_INSTALLATION_ID }}
-      APP_PRIVATE_KEY: ${{ vars.GH_APP_PRIVATE_KEY }}
+      APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
       OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-4o' }}
       DEBUG: ${{ vars.DEBUG || 'True' }}
       LOG_LEVEL: ${{ vars.LOG_LEVEL || 'INFO' }}
