Refactor GitHub App authentication service and update related imports
- Removed deprecated `get_github_app_auth` function and replaced it with `github_app_auth` proxy for lazy initialization.
- Updated imports in various modules to reflect the new authentication method.
- Adjusted test cases to ensure compatibility with the new authentication structure.
- Modified GitHub webhook handler to use the updated authentication method.
- Updated GitHub App authentication logic to improve token handling and validation.
- Changed Python version matrix in GitHub Actions workflow to exclude Python 3.10.
- Fixed invalid signature test case to assert correct status code.
- Added comprehensive Pinecone documentation for quick reference and best practices.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.11", "3.12"]
 
     # GLOBAL ENV VARS: Available to all steps in this job
     # Pydantic Settings will automatically pick these up.
