--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
             APP_ID: ${{ secrets.APP_ID }}
             APP_INSTALLATION_ID: ${{ secrets.GH_APP_INSTALLATION_ID }}
             APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
-            OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-4o' }}
+            OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-5-nano' }}
             DEBUG: ${{ vars.DEBUG || 'True' }}
             LOG_LEVEL: ${{ vars.LOG_LEVEL || 'INFO' }}
             ENVIRONMENT: ${{ vars.ENVIRONMENT || 'development' }}
