--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       APP_ID: ${{ vars.GH_APP_INSTALLATION_ID }}
       APP_INSTALLATION_ID: ${{ vars.GH_APP_INSTALLATION_ID }}
       APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
-      OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-4o' }}
+      OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-5-nano' }}
       DEBUG: ${{ vars.DEBUG || 'True' }}
       LOG_LEVEL: ${{ vars.LOG_LEVEL || 'INFO' }}
       ENVIRONMENT: ${{ vars.ENVIRONMENT || 'development' }}
