--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,68 @@
 # Pre-commit hooks configuration
-# TODO: Add ruff hook
-# TODO: Add black hook
-# TODO: Add trailing whitespace check
-# TODO: Add end-of-file fixer
-# TODO: Add check for large files
+# Install: pip install pre-commit && pre-commit install
+# Run manually: pre-commit run --all-files
+
+repos:
+  # Ruff - Fast Python linter and formatter
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.8.4
+    hooks:
+      - id: ruff
+        args: [--fix]
+      - id: ruff-format
+
+  # Type checking with mypy
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - pydantic>=2.10.0
+          - pydantic-settings>=2.6.0
+          - pydantic-ai[openai,logfire]>=0.0.1
+          - httpx>=0.28.0
+          - pyjwt[crypto]>=2.9.0
+          - langchain-openai>=0.2.0
+          - langchain-pinecone>=0.2.0
+          - pinecone>=5.0.0
+          - fastapi>=0.115.0
+          - langchain-community>=0.3.0
+          - types-PyYAML
+          - types-requests
+        args: [--config-file=pyproject.toml]
+        exclude: ^tests/|^scripts/
+
+  # General file checks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.6.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-json
+      - id: check-toml
+      - id: check-added-large-files
+        args: ['--maxkb=500']
+      - id: check-merge-conflict
+      - id: detect-private-key
+
+  # Secrets scanning
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.5.0
+    hooks:
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
+        exclude: |
+          (?x)^(
+            poetry.lock|
+            package-lock.json|
+            .*\.ipynb
+          )$
+
+  # Security checks
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.10
+    hooks:
+      - id: bandit
+        args: ['-ll', '-i']
+        exclude: ^tests/
