--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
       - id: check-yaml
       - id: check-json
       - id: check-toml
+      - id: check-added-large-files
         args: ['--maxkb=500']
       - id: check-merge-conflict
       - id: detect-private-key
