--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,8 +21,7 @@ repos:
       - id: check-yaml
       - id: check-json
       - id: check-toml
-      - id: check-added-large-files
-        args: ['--maxkb=500']
+        args: ["--maxkb=500"]
       - id: check-merge-conflict
       - id: detect-private-key
 
@@ -31,7 +30,7 @@ repos:
     rev: v1.5.0
     hooks:
       - id: detect-secrets
-        args: ['--baseline', '.secrets.baseline']
+        args: ["--baseline", ".secrets.baseline"]
         exclude: |
           (?x)^(
             poetry.lock|
@@ -44,5 +43,5 @@ repos:
     rev: 1.7.10
     hooks:
       - id: bandit
-        args: ['-ll', '-i']
+        args: ["-ll", "-i"]
         exclude: ^tests/
